Archive2/41/fe45954699d585/output
main.cpp: In instantiation of 'void Foo<T(Args ...)>::operator()(Accumulator&&, Uref&& ...) [with Accumulator = int; Uref = {}; T = void; Args = {long unsigned int}]':
main.cpp:31:17:   required from here
main.cpp:19:41: error: expression cannot be used as a function
         sink(std::forward<Uref>(args)...);
                                         ^
